realigning distorted perceptions

--- a/public/g-2017-08-04.html
+++ b/public/g-2017-08-04.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>gaia print 2017 08 05</title>
-<meta property="og:url"   content="http://gaia.tissuematter.com/g-2017-08-05.html" />
+<title>gaia print 2017 08 04</title>
+<meta property="og:url"   content="http://gaia.tissuematter.com/g-2017-08-04.html" />
 <meta property="og:type"  content="website" />
-<meta property="og:image" content="http://gaia.tissuematter.com/img/7DII0736.jpg" />
-<meta property="og:description" content=' Sun through smoke dancing on the sound
+<meta property="og:image" content="http://gaia.tissuematter.com/img/IMG_1587.JPG" />
+<meta property="og:description" content=' distorted perceptions
 Exhibition Canvas Gloss, 24" 
 Job Name
-Lightroom (7DII0719.dng)
+Lightroom (7DII0002.dng)
 User Name
 jon
 Host Name
@@ -17,20 +17,19 @@ zeus
 Status
  Completed
 Print Start Time
-08-05-2017 22:03:49
+08-05-2017 22:49:56
 Print End Time
-08-05-2017 22:20:13
+08-05-2017 23:09:34
 Paper Type
 Canvas Satin
 Amount of Paper
 H:945mm W:609mm / H:37.2inch W:24.0inch
 Total Sheets Printed
-1'
-/>
-<meta property="og:title" content="gaia 2017 08 05" />
+1' />
+<meta property="og:title" content="gaia 2017 08 04" />
 <meta property="fb:admins" content="1390144162" />
 </head>
 <body>
-<img src="img/7DII0736.jpg" alt=""/>
+<img src="img/IMG_1587.JPG" alt=""/>
 </body>
 </html>
