Exhibition Canvas Gloss, 24

--- a/public/g-2017-08-09.html
+++ b/public/g-2017-08-09.html
@@ -7,7 +7,7 @@
 <meta property="og:type"  content="website" />
 <meta property="og:image" content="http://gaia.tissuematter.com/img/IMG_1634.JPG" />
 <meta property="og:description" content=' waterdrop
-Exhibition Canvas, 24" x 36" 
+Exhibition Canvas Gloss, 24" 
 '/>
 <meta property="og:title" content="gaia 2017 08 09" />
 <meta property="fb:admins" content="1390144162" />
