--- a/public/g-2017-08-08.html
+++ b/public/g-2017-08-08.html
@@ -7,7 +7,7 @@
 <meta property="og:type"  content="website" />
 <meta property="og:image" content="http://gaia.tissuematter.com/img/IMG_0094.JPG" />
 <meta property="og:description" content=' fire water
-Exhibition Canvas, 32" x 36" 
+Exhibition Canvas Gloss, 24" 
 '/>
 <meta property="og:title" content="gaia 2017 08 08" />
 <meta property="fb:admins" content="1390144162" />
