--- a/public/g-2017-08-10.html
+++ b/public/g-2017-08-10.html
@@ -7,7 +7,7 @@
 <meta property="og:type"  content="website" />
 <meta property="og:image" content="http://gaia.tissuematter.com/img/IMG_1643.JPG" />
 <meta property="og:description" content=' smokey sunset on the water
-Exhibition Canvas, 24" x 36" 
+Exhibition Canvas Gloss, 24" 
 '/>
 <meta property="og:title" content="gaia 2017 08 10" />
 <meta property="fb:admins" content="1390144162" />
