--- a/public/g-2017-08-09.html
+++ b/public/g-2017-08-09.html
@@ -6,7 +6,7 @@
 <meta property="og:url"   content="http://gaia.tissuematter.com/g-2017-08-09.html" />
 <meta property="og:type"  content="website" />
 <meta property="og:image" content="http://gaia.tissuematter.com/img/IMG_1634.JPG" />
-<meta property="og:description" content=' waterdrop
+<meta property="og:description" content=' smokey night
 Exhibition Canvas Gloss, 24" 
 '/>
 <meta property="og:title" content="gaia 2017 08 09" />
